Fix icon visible position

--- a/src/Header/LoginPage.css
+++ b/src/Header/LoginPage.css
@@ -49,6 +49,12 @@ form {
     color: DodgerBlue;
 }
 
+.icons {
+    position: absolute;
+    top: calc(50% - 12px);
+    left: auto;
+    right: 8px;
+}
 
 .form-group .form-input .icons {
     display: flex;
@@ -56,10 +62,9 @@ form {
 }
 
 .form-group .form-input .icons span {
-    position: absolute;
-    top: 8px ;
-    padding-left: 90%;
     color: DodgerBlue;
+    position: static;
+    padding-left: 0;
 }
 .form-group .form-input .forgot {
     position: relative;
